--- a/src/app/mycomponent/navbar/navbar.component.css
+++ b/src/app/mycomponent/navbar/navbar.component.css
@@ -1,23 +1,16 @@
-.cart-link {
-    display: block;
-    text-decoration: none;
-  }
-  
+
   .cart-icon {
     height: 50px;
     width: 50px;
+    margin-right: 30px;
     
   }
 
-  .cart-link {
-    float: right;
-    margin-left: 20px;
-  }  
-
-
-.navbar-brand {
-    margin-right: 20px; /* Adjust margin as needed */
+  .navbar-brand{
+    margin-left: 30px;
   }
-  
 
-  
+  b{
+   color: rgb(159, 202, 0);
+    font-size: large;
+  }
