--- a/src/app/mycomponent/navbar/navbar.component.html
+++ b/src/app/mycomponent/navbar/navbar.component.html
@@ -1,24 +1,18 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand mr-auto" routerLink="/"><b style="margin-left: 20px;">ESPARE</b></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
+    <a class="navbar-brand" routerLink="/"><b>E-SPARE</b></a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" routerLink="/">Home</a>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/" routerLinkActive="active">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/cart">Cart</a>
+          <a class="nav-link" routerLink="/cart" routerLinkActive="active">Cart</a>
         </li>
       </ul>
     </div>
   
-    <div class="form-inline my-2 my-lg-0 ml-auto">
-      <a routerLink="/cart" class="cart-link">
-        <img class="cart-icon" src="https://www.freeiconspng.com/thumbs/cart-icon/basket-cart-icon-27.png" alt="Cart">
-      </a>
-    </div>
+    <a routerLink="/cart" class="cart-link">
+      <img class="cart-icon" src="https://www.freeiconspng.com/thumbs/cart-icon/basket-cart-icon-27.png" alt="Cart">
+    </a>
   </nav>
   
