--- a/src/app/mycomponent/catalogue/catalogue.component.css
+++ b/src/app/mycomponent/catalogue/catalogue.component.css
@@ -1,9 +1,8 @@
 .product-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center; /* Center horizontally */
-  align-items: center; /* Center vertically */
-}
+  justify-content: center; 
+} 
   
   .product-card {
     border: 1px solid #ccc;
@@ -62,8 +61,37 @@
   }
   
 
-  @media screen and (max-width: 280px) {
-    .product-container {
-      justify-content: flex-start; /* Align items to the left on smaller screens */
-    }
-  }
+ /* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  /* CSS rules for extra small devices */
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  /* CSS rules for small devices */
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  /* CSS rules for medium devices */
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  /* CSS rules for large devices */
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  /* CSS rules for extra large devices */
+}
+
+/* Landscape phones and small tablets */
+@media only screen and (min-width: 481px) and (max-width: 767px) {
+  /* CSS rules for landscape phones and small tablets */
+}
+
+/* Portrait tablets and medium-sized desktops */
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  /* CSS rules for portrait tablets and medium-sized desktops */
+}
