--- a/src/app/mycomponent/cart/cart.component.css
+++ b/src/app/mycomponent/cart/cart.component.css
@@ -5,6 +5,15 @@
   padding: 20px;
 }
 
+h1{
+  margin: 20px;
+}
+
+p span{
+  color: #007bff;
+  cursor: pointer;
+}
+
 .product-details {
   width: 100%;
   max-width: 800px;
@@ -78,6 +87,7 @@
 .no-products {
   color: #999;
   font-style: italic;
+  text-align: center;
 }
 
 .payment-details {
