--- a/src/app/mycomponent/checkout-page/checkout-page.component.css
+++ b/src/app/mycomponent/checkout-page/checkout-page.component.css
@@ -3,6 +3,20 @@
     margin: 0 auto;
     padding: 20px;
   }
+
+  .page-header {
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.page-header h1 {
+    font-size: 32px;
+    color: #333; /* Dark color for better readability */
+    text-transform: uppercase; /* Convert text to uppercase */
+    padding-bottom: 30px; /* Adjust space below the title */
+}
+
   
   .order-summary {
     border: 1px solid #ccc;
