--- a/src/app/mycomponent/checkout-page/checkout-page.component.html
+++ b/src/app/mycomponent/checkout-page/checkout-page.component.html
@@ -1,5 +1,7 @@
 <div class="container">
+  <div class="page-header">
     <h1>Confirm Order</h1>
+</div>
     <div class="order-summary">
       <h2>Order Summary</h2>
       <table>
