--- a/src/app/mycomponent/cart/cart.component.html
+++ b/src/app/mycomponent/cart/cart.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Checkout Your Cart</h1>
+  <h1>CHECKOUT YOUR CART</h1>
   <div class="product-details">
     <div *ngIf="cartService.cartItems.length > 0; else noProducts">
       <div *ngFor="let item of cartService.cartItems" class="product-card">
