--- a/src/app/mycomponent/navbar/navbar.component.html
+++ b/src/app/mycomponent/navbar/navbar.component.html
@@ -1,4 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <img src="https://assets-global.website-files.com/5a9ee6416e90d20001b20038/64b3d538e9d79e7ecf7dce4e__28.png" alt="logo">
     <a class="navbar-brand" routerLink="/"><b>E-SPARE</b></a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
